--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./styles/style.css">
     </head>
     <body>
         <h1> 
             Odin Recipes
         </h1>
-        <img width='500' src="./images/cooking.webp" alt="Cooking at home with pan">
+        <img id="homepage-image" src="./images/cooking.webp" alt="Cooking at home with pan">
 
         <h2>Recipes</h2>
         <ul>
